# onvif-rs

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: git.yml  rust.yml
examples/: camera_datetime.rs  camera_get_stream_uri.rs  camera_set_hostname.rs  discovery.rs
macro-utils/: Cargo.toml
macro-utils/src/: lib.rs  tuple.rs
onvif/: Cargo.toml
onvif-rs/: Cargo.toml
onvif-rs/examples/: camera.rs  camera_datetime.rs  camera_get_stream_uri.rs  camera_set_hostname.rs
onvif-rs/src/discovery/: mod.rs
onvif-rs/src/soap/: auth.rs  client.rs
onvif-rs/src/utils/: xml_eq.rs
onvif/examples/: camera.rs  discovery.rs  event.rs
onvif/src/: lib.rs
onvif/src/discovery/: mod.rs  network_enumeration.rs
onvif/src/soap/: auth.rs  client.rs  mod.rs  tests.rs
onvif/src/soap/auth/: digest.rs  username_token.rs
onvif/src/utils/: display_list.rs  mod.rs  xml_eq.rs
schema/: Cargo.toml
schema/src/: accesscontrol.rs  accessrules.rs  actionengine.rs  advancedsecurity.rs  analytics.rs  authenticationbehavior.rs  b_2.rs  bf_2.rs  common.rs  credential.rs  deviceio.rs  devicemgmt.rs  display.rs  doorcontrol.rs  event.rs  imaging.rs  lib.rs  media.rs  media2.rs  metadatastream.rs  onvif.rs  provisioning.rs  ptz.rs  radiometry.rs  receiver.rs  recording.rs  replay.rs  rules.rs  schedule.rs  search.rs  soap_envelope.rs  t_1.rs  tests.rs  thermal.rs  transport.rs  types.rs  uplink.rs  validate.rs  ws_addr.rs  ws_discovery.rs  (+2 more)
schema/src/tests/: utils.rs
schema/src/utils/: mod.rs
schema/src/xop/: include.rs
src/: lib.rs  transport.rs
src/discovery/: mod.rs
src/schema/: accesscontrol.rs  accessrules.rs  actionengine.rs  advancedsecurity.rs  analytics.rs  authenticationbehavior.rs  b_2.rs  bf_2.rs  common.rs  credential.rs  decimal.rs  deviceio.rs  devicemgmt.rs  display.rs  doorcontrol.rs  duration.rs  event.rs  imaging.rs  integer.rs  media.rs  media2.rs  metadatastream.rs  mod.rs  onvif.rs  provisioning.rs  ptz.rs  radiometry.rs  receiver.rs  recording.rs  replay.rs  rules.rs  schedule.rs  search.rs  soap_envelope.rs  t_1.rs  tests.rs  thermal.rs  transport.rs  types.rs  uplink.rs  (+3 more)
src/schema/xop/: include.rs  mod.rs
src/schema/xs/: decimal.rs  duration.rs  integer.rs  mod.rs
src/soap/: client.rs  fault.rs  mod.rs  tests.rs
src/utils/: mod.rs  xml_eq.rs  yaserde.rs
tests/: yaserde.rs
transport/: Cargo.toml
validate/: Cargo.toml
wsdl/: accesscontrol.wsdl.xml  actionengine.rs  advancedsecurity.rs  advancedsecurity.wsdl.xml  analytics.rs  analytics.wsdl.xml  authenticationbehavior.wsdl.xml  credential.wsdl.xml  deviceio.rs  deviceio.wsdl.xml  devicemgmt.rs  devicemgmt.wsdl.xml  display.rs  doorcontrol.wsdl.xml  event.rs  event.wsdl.xml  imaging.rs  media2.rs  recording.rs  replay.rs  thermal.rs  uplink.rs  ws-discovery.wsdl
wsdl_rs/accesscontrol/: Cargo.toml
wsdl_rs/accesscontrol/src/: lib.rs
wsdl_rs/accessrules/: Cargo.toml
wsdl_rs/accessrules/src/: lib.rs
wsdl_rs/actionengine/: Cargo.toml
wsdl_rs/actionengine/src/: lib.rs
wsdl_rs/advancedsecurity/: Cargo.toml
wsdl_rs/advancedsecurity/src/: lib.rs
wsdl_rs/analytics/: Cargo.toml
wsdl_rs/analytics/src/: lib.rs
wsdl_rs/authenticationbehavior/: Cargo.toml
wsdl_rs/authenticationbehavior/src/: lib.rs
wsdl_rs/b_2/: Cargo.toml
wsdl_rs/b_2/src/: lib.rs
wsdl_rs/bf_2/: Cargo.toml
wsdl_rs/bf_2/src/: lib.rs
wsdl_rs/credential/: Cargo.toml
wsdl_rs/credential/src/: lib.rs
wsdl_rs/deviceio/: Cargo.toml
wsdl_rs/deviceio/src/: lib.rs
wsdl_rs/devicemgmt/: Cargo.toml
wsdl_rs/devicemgmt/src/: lib.rs
wsdl_rs/display/: Cargo.toml
wsdl_rs/display/src/: lib.rs
wsdl_rs/doorcontrol/: Cargo.toml
wsdl_rs/doorcontrol/src/: lib.rs
wsdl_rs/event/: Cargo.toml
wsdl_rs/event/src/: lib.rs
wsdl_rs/imaging/: Cargo.toml
wsdl_rs/imaging/src/: lib.rs
wsdl_rs/media/: Cargo.toml
wsdl_rs/media/src/: lib.rs
wsdl_rs/media2/: Cargo.toml
wsdl_rs/media2/src/: lib.rs
wsdl_rs/provisioning/: Cargo.toml
wsdl_rs/provisioning/src/: lib.rs
wsdl_rs/ptz/: Cargo.toml
wsdl_rs/ptz/src/: lib.rs
wsdl_rs/receiver/: Cargo.toml
wsdl_rs/receiver/src/: lib.rs
wsdl_rs/recording/: Cargo.toml
wsdl_rs/recording/src/: lib.rs
wsdl_rs/replay/: Cargo.toml
wsdl_rs/replay/src/: lib.rs
wsdl_rs/schedule/: Cargo.toml
wsdl_rs/schedule/src/: lib.rs
wsdl_rs/search/: Cargo.toml
wsdl_rs/search/src/: lib.rs
wsdl_rs/t_1/: Cargo.toml
wsdl_rs/t_1/src/: lib.rs
wsdl_rs/thermal/: Cargo.toml
wsdl_rs/thermal/src/: lib.rs
wsdl_rs/uplink/: Cargo.toml
wsdl_rs/uplink/src/: lib.rs
wsdl_rs/ws_addr/: Cargo.toml
wsdl_rs/ws_addr/src/: lib.rs
wsdl_rs/ws_discovery/: Cargo.toml
wsdl_rs/ws_discovery/src/: lib.rs
wsdl_rs/xml_xsd/: Cargo.toml
wsdl_rs/xml_xsd/src/: lib.rs
xsd/: common.xsd  metadatastream.xsd  onvif.xsd  types.xsd
xsd_external/: ws-discovery.xsd  xmlmime.xsd
xsd_rs/common/: Cargo.toml
xsd_rs/common/src/: lib.rs
xsd_rs/metadatastream/: Cargo.toml
xsd_rs/metadatastream/src/: lib.rs
xsd_rs/onvif_xsd/: Cargo.toml
xsd_rs/onvif_xsd/src/: lib.rs
xsd_rs/radiometry/: Cargo.toml
xsd_rs/radiometry/src/: lib.rs
xsd_rs/rules/: Cargo.toml
xsd_rs/rules/src/: lib.rs
xsd_rs/soap_envelope/: Cargo.toml
xsd_rs/soap_envelope/src/: lib.rs
xsd_rs/types/: Cargo.toml
xsd_rs/types/src/: lib.rs
xsd_rs/xmlmime/: Cargo.toml
xsd_rs/xmlmime/src/: lib.rs
xsd_rs/xop/: Cargo.toml
xsd_rs/xop/src/: include.rs  lib.rs
