[package]
name = "onvif-rs"
version = "0.1.0"
authors = ["Chris Bruce <chris@lumeo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
xml-rs = "0.8.0"
xmltree = "0.8.0"
yaserde = "0.3.10"
yaserde_derive = "0.3.10"
itertools = "0.8.1"
reqwest = "0.9.22"
uuid = { version = "0.8.1", features = ["v4"] }
async-std = { version = "1.4.0", features = ["unstable"] }
futures = "0.3.1"
