[package]
name = "onvif-rs"
version = "0.1.0"
authors = ["Chris Bruce <chris@lumeo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
xml-rs = "0.8.0"
xmltree = "0.8.0"
yaserde = "0.3.12"
yaserde_derive = "0.3.12"
itertools = "0.8.1"
reqwest = "0.10.1"
uuid = { version = "0.8.1", features = ["v4"] }
futures = "0.3.4"
async-std = { version = "1.5.0", features = ["unstable"] }
async-trait ="0.1.24"
tokio = { version = "0.2.11", features = ["full"] }
num-bigint = "0.2.6"
bigdecimal = "0.1.0"
macro-utils = { path = "macro-utils" }

[patch.crates-io]
yaserde = { git = "https://github.com/media-io/yaserde", rev = "389077e" }
yaserde_derive = { git = "https://github.com/media-io/yaserde", rev = "389077e" }
