[workspace]

members = [
    "onvif",
    "schema",
    "transport",
    "validate",
    "xsd_rs/common",
    "xsd_rs/metadatastream",
    "xsd_rs/onvif_xsd",
    "xsd_rs/radiometry",
    "xsd_rs/rules",
    "xsd_rs/soap_envelope",
    "xsd_rs/types",
    "xsd_rs/xmlmime",
    "xsd_rs/xop",
    "wsdl_rs/accesscontrol",
    "wsdl_rs/accessrules",
    "wsdl_rs/actionengine",
    "wsdl_rs/advancedsecurity",
    "wsdl_rs/analytics",
    "wsdl_rs/authenticationbehavior",
    "wsdl_rs/b_2",
    "wsdl_rs/bf_2",
    "wsdl_rs/credential",
    "wsdl_rs/deviceio",
    "wsdl_rs/devicemgmt",
    "wsdl_rs/display",
    "wsdl_rs/doorcontrol",
    "wsdl_rs/event",
    "wsdl_rs/imaging",
    "wsdl_rs/media",
    "wsdl_rs/media2",
    "wsdl_rs/provisioning",
    "wsdl_rs/ptz",
    "wsdl_rs/receiver",
    "wsdl_rs/recording",
    "wsdl_rs/replay",
    "wsdl_rs/schedule",
    "wsdl_rs/search",
    "wsdl_rs/t_1",
    "wsdl_rs/thermal",
    "wsdl_rs/uplink",
    "wsdl_rs/ws_addr",
    "wsdl_rs/ws_discovery",
    "wsdl_rs/xml_xsd",
]
