[package]
name = "macro-utils"
version = "0.1.0"
authors = ["Chris Bruce <chris@lumeo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "~1.0"
proc-macro2 = "~1.0"
quote = "~1.0"

[lib]
name = "macro_utils"
proc-macro = true
