[package]
name = "onvif-rs"
version = "0.1.0"
authors = ["Chris Bruce <chris@lumeo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schema = { path = "../schema" }
log = "0.4.8"
xml-rs = "0.8.0"
xmltree = "0.8.0"
yaserde = { git = "https://github.com/media-io/yaserde", rev = "137af01" }
yaserde_derive = { git = "https://github.com/media-io/yaserde", rev = "137af01" }
itertools = "0.8.1"
reqwest = "0.10.1"
chrono = "0.4.10"
base64 = "0.11.0"
sha1 = "0.6.0"
url = "2.0"
uuid = { version = "0.8.1", features = ["v4"] }
futures = "0.3.4"
async-std = { version = "1.5.0", features = ["unstable"] }
async-trait ="0.1.24"
async-recursion = "0.3.1"
tokio = { version = "0.2.11", features = ["full"] }
num-bigint = "0.2.6"
bigdecimal = "0.1.0"
macro-utils = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "f3be2b95" }
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "f3be2b95" }

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.7.1"
