[package]
name = "schema"
version = "0.1.0"
authors = ["Chris Bruce <chris@lumeo.com>"]
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4.11"
xml-rs = "0.8.3"
yaserde = "0.6.0"
yaserde_derive = "0.6.0"
chrono = "0.4.19"
async-trait = "0.1.42"
num-bigint = "0.4.2"
bigdecimal = "0.3.0"
xsd-macro-utils = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "91667d5" }
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "91667d5" }
percent-encoding = "2.1.0"
thiserror = "1.0.23"
url = "2.2.1"

[dev-dependencies]
assert_approx_eq = "1.1.0"
tokio = { version = "1.0.1", features = ["full"] }
