[package]
name = "schema"
version = "0.1.0"
authors = ["Chris Bruce <chris@lumeo.com>"]
edition = "2018"
license = "MIT"

[dependencies]
async-trait = "0.1.42"
bigdecimal = "0.3.0"
chrono = "0.4.19"
num-bigint = "0.4.2"
percent-encoding = "2.1.0"
thiserror = "1.0.23"
url = "2.2.1"
xml-rs = "0.8.3"
xsd-macro-utils = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
yaserde = "0.7.1"
yaserde_derive = "0.7.1"

[dev-dependencies]
assert_approx_eq = "1.1.0"
tokio = { version = "1.0.1", features = ["full"] }
