[package]
name = "display"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
common = { path = "../../xsd_rs/common" }
onvif = { package = "onvif-xsd", path = "../../xsd_rs/onvif_xsd" }
transport = { path = "../../transport" }
validate = { path = "../../validate" }
xml-rs = "=0.8.3"
xsd-macro-utils = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
yaserde = "0.7.1"
yaserde_derive = "0.7.1"
