[package]
name = "event"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
b_2 = { path = "../../wsdl_rs/b_2" }
t_1 = { path = "../../wsdl_rs/t_1" }
transport = { path = "../../transport" }
validate = { path = "../../validate" }
xml-rs = "=0.8.3"
xsd-macro-utils = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
yaserde = "0.7.1"
yaserde_derive = "0.7.1"
ws_addr = { path = "../../wsdl_rs/ws_addr" }
