[package]
name = "onvif-xsd"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
b_2 = { path = "../../wsdl_rs/b_2" }
common = { path = "../common" }
soap_envelope = { path = "../../xsd_rs/soap_envelope" }
validate = { path = "../../validate" }
xml-rs = "=0.8.3"
xmlmime = { path = "../../xsd_rs/xmlmime" }
xop = { path = "../../xsd_rs/xop" }
xsd-macro-utils = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
yaserde = "0.7.1"
yaserde_derive = "0.7.1"
